--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ python-dotenv = "==1.0.1"
 sqlparse = "==0.4.4"
 typing-extensions = "==4.9.0"
 tzdata = "==2024.1"
+psycopg2-binary = "*"
 
 [dev-packages]
 
