--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,15 @@ python-dotenv = "==1.0.1"
 sqlparse = "==0.4.4"
 typing-extensions = "==4.9.0"
 tzdata = "==2024.1"
-psycopg2-binary = "*"
+psycopg2-binary = "==2.9.9"
+certifi = "==2024.2.2"
+charset-normalizer = "==3.3.2"
+cloudinary = "==1.38.0"
+dj3-cloudinary-storage = "==0.0.6"
+idna = "==3.6"
+requests = "==2.31.0"
+six = "==1.16.0"
+urllib3 = "==2.2.1"
 
 [dev-packages]
 
