--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
 asgiref==3.7.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+cloudinary==1.38.0
+dj3-cloudinary-storage==0.0.6
 Django==4.2.10
+idna==3.6
 pillow==10.2.0
 psycopg2-binary==2.9.9
 python-decouple==3.8
 python-dotenv==1.0.1
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
 tzdata==2024.1
+urllib3==2.2.1
